--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chrome-extension-svelte",
+  "name": "ai-text-assistant",
   "private": true,
   "version": "0.0.0",
   "type": "module",
